samples/_failures_safe/1761156475_a6c87d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db14ae29.c: In function ‘main’:
./samples/SAFE/__tmp_db14ae29.c:146:5: error: expected expression at end of input
  146 |     for (int i = 0; i < entry_count; i++)
      |     ^~~
./samples/SAFE/__tmp_db14ae29.c:146:5: error: expected declaration or statement at end of input
